# Camera-Calib-OpenCV

./: .gitignore  CMakeLists.txt  README.md  setup.bat
config/: IR_chessboard.xml  imgs.xml  param3.yaml  stereo_imgs.xml  stereo_setting.xml
config_cpy/: IR_chessboard.xml  imgs.xml
imgs/: circle_grid.rar
include/: chessboard.h  circle_board.h
src/: blob_detector.cpp  chessboard.cpp  circle_board.cpp  stereo_calib.cpp
